# compilo

./: compilo.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: compilo.dune-package  compilo.install  compilo.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: compilo.cma  compilo.cmxa  compilo.cmxs  compilo.ml-gen  pcode.ml
_build/default/lib/.compilo.objs/: cctx.ocaml-index  compilo__Node.impl.d  compilo__Pcode.impl.d  compilo__Tree.impl.all-deps  compilo__Tree.impl.d
_build/default/lib/.compilo.objs/byte/: compilo.cmi  compilo.cmo  compilo.cmt  compilo__Node.cmi  compilo__Node.cmo  compilo__Node.cmt  compilo__Pcode.cmi  compilo__Pcode.cmo  compilo__Pcode.cmt  compilo__Tree.cmi  compilo__Tree.cmo  compilo__Tree.cmt
_build/default/lib/.compilo.objs/native/: compilo.cmx  compilo__Node.cmx  compilo__Pcode.cmx  compilo__Tree.cmx
_build/default/lib/.merlin-conf/: lib-compilo
_build/default/test/.merlin-conf/: exe-test_compilo
_build/default/test/.test_compilo.eobjs/byte/: dune__exe__Test_compilo.cmi  dune__exe__Test_compilo.cmti
_build/default/test/.test_compilo.eobjs/native/: dune__exe__Test_compilo.cmx
_build/install/default/lib/compilo/: META  dune-package  opam
lib/: dune  node.ml  tree.ml
test/: dune
