(lang dune 3.17)

(name compilo)

(generate_opam_files true)

(source
 (github emerikaji/compilo))

(authors "Emerik AJI <emerikaji@gmail.com>")

(license BSD3)

(package
 (name compilo)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
